# Python

./: README.md
my-awesome-script/: pyproject.toml  setup.cfg  setup.py
my-awesome-script/my_awesome_script/: command_line.py
my-awesome-script/my_awesome_script.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
my-awesome-script/tests/: test_my_awesome_script.py
my-todo/: pyproject.toml  setup.config  todo.json
my-todo/my_todo/: hw7.py
my-todo/tests/: test_my_todo.py
