[tool.poetry]
name = "my-awesome-script"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
cowpy = "^1.1.2"
putz = "^1.0.1"
Pygments = "^2.10.0"
pytz = "^2021.3"
safety = "^1.10.3"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
safety = "^1.10.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
